jguffey/pub/css/site.less
@blu: #01c4e7;
@darker: #0193ad;
@accent2 : #B1E3F2;
@text: #fff;
@accent: #E76901;

html{
	background: @blu;
	body{
		font-family: 'Rokkitt', serif;
		color: @text;
		font-size: 18px;
		#container{
			header{
				z-index: 1;
				position: relative;
				margin: 0 auto;
				padding: 30px 0 140px;
				width: 960px;
				
				transition-property: background-color, padding, width;
				transition-duration: 0.25s, 0.25s, 0.25s;
				transition-timing-function: ease-out, ease-out, ease-out;

				-webkit-transition-property: background-color, padding, width;
				-webkit-transition-duration: 0.25s, 0.25s, 0.25s;
				-webkit-transition-timing-function: ease-out, ease-out, ease-out;
				a{
					color: @text;
				}
				a:hover, a:hover:visited{
					color: lighten(@accent, 30%);
				}
				.mark{
					overflow: hidden;
					float: left;
					h1{
						margin: 0 10px 0 0; padding: 0;
						font-weight: 700;
						font-size: 38px;
						line-height: 38px;
						float: left;
					}
					p{
						margin: 0; padding: 0;
						height: 38px;
						font-size: 14px;
						display: table-cell;
						vertical-align: bottom;
					}
				}/*/.mark*/
				nav{
					margin: 0; padding: 0;
					float: right;
					ul{
						margin: 0; padding: 0;
						list-style: none;
						li{
							margin: 0; padding: 0 5px;
							list-style: none;
							float: left;
							a{
								display: block;
								padding: 0 5px;
								height: 38px;
								display: table-cell;
								vertical-align: bottom;
								font-size: 18px;
							}
						}
					}
				}/*/nav*/
			}/*/header*/
			img.me{
				position: fixed;
				bottom: 0px;
				right: -40px;
				z-index: 0;
				-webkit-transform:translateZ(0);
			}
			#main{
				clear: both;
				margin: 0 auto;
				width: 960px;
				&.posts{
					h2{
						color: @darker;
						display: block;
						text-align: center;
						font-size: 24px;
						line-height: 24px;
					}
					ul{
						margin: 0; padding: 0;
						list-style: none;
						li{
							margin: 0; padding: 0;
							list-style: none;
							text-align: center;
							a{
								text-align: center;
								font-size: 24px;
								color: @text;
								&:hover{
									color: lighten(@accent, 30%);
								}
							}/*/a*/
						}/*/li*/
					}/*/ul*/
				}
				&.about{
					h2{ 
						margin: 0 0 100px; 
						z-index: 1;
						position: relative;
					}
					.content{
						z-index: 1;
						position: relative;
					}
					p.exerpt{ font-size: 24px; line-height: 30px; }
				}
				h2{
					font-size: 70px;
					line-height: 70px;
					text-align: center;
					margin: 0 0 100px;
				}
				.meta{
					padding: 10px 0 0;
					p{
						text-align: right;
						margin: 0 40px 20px 0;
					}
				}
				.content{
					p{
						margin: 0 0 40px;
						font-size: 24px;
						line-height: 30px;
						a{
							padding: 0
						}
						&.exerpt{
							color: @darker;
							font-size: 30px;
							line-height: 34px;
						}
					}
				}
			}/*/#main*/
			footer{
				clear: both;
				z-index: 1;
				position: relative;
				padding: 150px 0 50px;
				color: @darker;
				a{ 
					color: @darker;
					&:hover, &:hover:visited{
						color: lighten(@accent, 30%);
					}
				}
				font-size: 14px;
				p{ text-align: center; }
			}/*/footer*/
		}/*/#container*/
	}/*/body*/
}/*/html*/


a{
	text-decoration: none;
	color: @accent2;
	/*border-bottom: 1px dotted @text;*/
	&:visited{
		color: @accent2;
	}
	&:hover, &:visited:hover{
		color: lighten(@accent, 30%);
	}
}
::-moz-selection { background: @accent; color: @text; text-shadow: none; }
::selection { background: @accent; color: @text; text-shadow: none; }


@media only screen and (max-width: 480px) {
	/* below 480, above 320 */
	header{ background: rgba(0,0,0,0.1); }
	
	html body #container header nav ul li{
		a{
			display: block;
			text-align: left;
			text-indent: -9999px;
			background: url('static/img/icons.png') no-repeat scroll top left;
			width: 25px;
			height: 25px;
			padding: 0;
		}
		&.github a{ 	background: url('/static/img/icons.png') no-repeat scroll 0 0; }
		&.twitter a{ background: url('/static/img/icons.png') no-repeat scroll 0 -29px; }
		&.about a{ 	background: url('/static/img/icons.png') no-repeat scroll 0 -60px; }
		&.mail a{  	background: url('/static/img/icons.png') no-repeat scroll 0 -88px; }
	}
	
}
@media only screen and (max-width: 320px) {
	/*smallest*/
	header{ background: rgba(0,0,0,0.1); }
}

